changes to coordinators list  popup